# TEDA

./: .gitignore  CITATION.cff  Main.py  README.md  README_.md  pyproject.toml  requirements.txt
analysis/: AnalysisEnKF.py  AnalysisEnKFBLoc.py  AnalysisEnKFCholesky.py  AnalysisEnKFModifiedCholesky.py  AnalysisEnKFNaive.py  __init__.py  analysis.py  analysis_enkf.py  analysis_enkf_bloc.py  analysis_enkf_cholesky.py  analysis_enkf_modified_cholesky.py  analysis_enkf_naive.py  analysis_enkf_shrinkage_precision.py  analysis_ensrf.py  analysis_etkf.py  analysis_factory.py  analysis_lenkf.py  analysis_letkf.py
background/: background.py
docs/: index.md
examples/: TEDA_Examples.ipynb  basic_enkf_mc_qg.py  basic_enkf_mc_qg_storing_states.py  basic_enkf_mc_qg_storing_states_map.py  basic_enkf_qg.py  basic_lenkf.py  basic_letkf_qg.py  basic_template.py  using_the_QG_model.ipynb
models/: lorenz96.py  model.py
observation/: observation.py
pyteda/: __init__.py
pyteda/analysis/: __init__.py  analysis_enkf.py  analysis_enkf_bloc.py  analysis_enkf_cholesky.py  analysis_enkf_modified_cholesky.py  analysis_enkf_naive.py  analysis_enkf_shrinkage_precision.py  analysis_ensrf.py  analysis_etkf.py  analysis_factory.py  analysis_lenkf.py  analysis_letkf.py  loader.py  registry.py  using_the_QG_model.ipynb
pyteda/background/: __init__.py  background_core.py
pyteda/models/: __init__.py  model.py  quasi_geostrophic.py
pyteda/observation/: __init__.py  observation_core.py
pyteda/simulation/: __init__.py  (+1 more)
simulation/: simulation.py
teda/: __init__.py  basic_template.py
(+18 files in other folders)
