[project]
name = "pyteda"
version = "0.1.7"
description = "TEDA: Toy models and ensemble-based Data Assimilation methods for education and experimentation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name = "Elías D. Niño-Ruiz", email = "elias.d.nino@gmail.com" }
]
keywords = ["data assimilation", "EnKF", "education", "Lorenz96", "Python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-learn"
]

[tool.setuptools]
packages = ["pyteda"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
